Fixing modal spacing.

--- a/frontend/src/App/styles/components/_modal.scss
+++ b/frontend/src/App/styles/components/_modal.scss
@@ -15,9 +15,8 @@
 
 	&__skills {
 		&--item {
-			display: flex;
-			align-items: center;
-			justify-content: center;
+      @include flexCenterCenter();
+      margin: 0 0.5rem;
 		}
 
 		&--icon {
