--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -399,7 +399,8 @@
 			align-items: center;
 			justify-content: space-around;
 			width: 100%;
-			margin: 1rem 0;
+			// margin: 1rem 0;
+			margin-top: 1rem;
 			flex-wrap: wrap;
 		}
 	}
@@ -408,7 +409,7 @@
 	&__paragraph {
     &--container {
       overflow-y: scroll;
-      padding: 0.5rem 0;
+      padding: 1rem 0;
       width: 100%;
     }
 	}
